--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "expo": "~53.0.9",
+    "expo-image-picker": "~16.0.3",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.8.1",
     "react": "19.0.0",
